Added pokeApi Page to sidemenu

--- a/src/pages/poke-api/poke-api.html
+++ b/src/pages/poke-api/poke-api.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>pokeApi</ion-title>
+    <ion-title>Poke API</ion-title>
   </ion-navbar>
 
 </ion-header>
