--- a/src/pages/dgii/dgii.html
+++ b/src/pages/dgii/dgii.html
@@ -28,5 +28,5 @@
 
   <br>
   
-  <p><strong>Nombre comercial:</strong> {{contribuyente?.NOMBRE_COMERCIAL}}</p> 
+  <p><strong>Nombre comercial:</strong> {{contribuyente?.RGE_NOMBRE}}</p> 
 </ion-content>
